--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
-body{
+body {
     font-family: 'Roboto', sans-serif;
 }
-h1{
+
+h1 {
     text-align: center;
     margin-top:20px;
 }
@@ -46,7 +47,7 @@ h3{
 .date {
     font-weight: bold;
     position: absolute;
-    top:80%;
-    left:70%;
-    color:gray;
+    bottom: 10px;
+    right: 10px;
+    color: gray;
 }
