--- a/src/style.css
+++ b/src/style.css
@@ -52,12 +52,11 @@ h3{
     color: gray;
 }
 .addCard {
-    border-radius: 50%;
-    height: 60px;
-    width: 60px;
-    position: fixed;
-    font-size: 40px;
-    left: 50px;
+    border-radius: 5px;
+    height: 30px;
+    align-self: flex-end;
+    font-weight: bold;
+    font-size: 15px;
 }
 .modal {
     display: none;
@@ -69,21 +68,64 @@ h3{
     bottom: 0;
     left: 0;
     background: rgba(0,0,0,0.8);
-    z-index: 99999;
+    z-index: 9;
 }
 .modal-card {
-    width: 400px;
-    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 350px;
+    height: 250px;
     position: relative;
     margin: 30% auto;
     padding: 5px 20px 13px 20px;
     border-radius: 5px;
     box-shadow: 0 3px 5px 3px lightgray;
     background: #fff;
+    z-index: 88;
 }
 .modal:target {
     display: flex;
 }
-#btn-add {
-    text-decoration: none;
+.close {
+    font-size: 20px;
+}
+.open-modal {
+    border-radius: 50%;
+    height: 60px;
+    width: 60px;
+    position: fixed;
+    font-size: 40px;
+    left: 50px;
+}
+.delete {
+    position: absolute;
+    right: 20px;
+    top: -10px;
+    width:30px;
+    height: 30px;
+    border-radius: 5px;
+    font-size: 15px;
+    text-align: center;
+    padding: 0;
+}
+.close-box {
+    align-items: center;
+    position: absolute;
+    right: 20px;
+    top: -10px;
+    width:30px;
+    height: 30px;
+    z-index: 4;
+}
+input {
+    width: 80%;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    margin-bottom: 10px;
+    padding: 5px;
+}
+input:hover{
+    box-shadow: 0 3px 5px 3px lightgray;
 }
