--- a/first-site/src/styles/index.scss
+++ b/first-site/src/styles/index.scss
@@ -2,6 +2,7 @@
 
 @import './color';
 @import './block';
+@import './gallery';
 
 html, body, #root {
   padding: 0;
@@ -17,4 +18,33 @@ input, textarea, select, button {
 
 .container {
 
+}
+a {
+  text-decoration: none;
+  color: $color-primary;
+}
+a:hover {
+  color: $color-active;
+}
+.btn-main {
+  border-radius: 0;
+  height: 40px;
+  background-color: $color-active;
+  color: $color-light;
+  border: 0;
+  padding: 0 30px;
+}
+.mid-text {
+  padding: 10px 0;
+}
+.center-text {
+  padding: 10px 0;
+  text-align: center;
+}
+.capslock {
+  font-size: 10px;
+  font-weight: bold;
+}
+.number {
+  font-weight: bold;
 }
