--- a/first-site/src/styles/block.scss
+++ b/first-site/src/styles/block.scss
@@ -116,3 +116,105 @@
 .box {
   width: 100%;
 }
+.video-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 500px;
+  margin: 100px 30px;
+  background-color: $color-secondary;
+  text-align: center;
+}
+.work-options {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  margin: 20px;
+}
+.black-border {
+  border: 1px solid $color-primary;
+  margin-right: 0;
+}
+.slider {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+.slider-btn {
+  border: 0;
+  border-radius: 50%;
+  width: 5px;
+  height: 5px;
+  background-color: $color-light;
+  margin: 3px;
+}
+.active {
+  width: 10px;
+  height: 10px;
+}
+.message {
+  max-width: 700px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.input-message {
+  width: 40%;
+  height: 20px;
+  border: 0;
+  background-color: $color-light;
+  margin: 25px 0;
+  padding: 15px;
+}
+.large {
+  width: 100%;
+}
+.textarea-message {
+  width: 100%;
+  border: 0;
+  background-color: $color-light;
+  margin: 25px 0;
+  padding: 15px;
+  font-size: 12px;
+}
+.footer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.contacts {
+
+}
+.copyright {
+
+}
+.footer-menu {
+
+
+}
+.menu-combo {
+
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+
+}
+.footer-link-menu {
+  list-style-type: none;
+  margin: 0 10px;
+  padding: 10px;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 12px;
+}
+.footer-link {
+  padding: 5px;
+}
