--- a/first-site/src/styles/index.scss
+++ b/first-site/src/styles/index.scss
@@ -33,6 +33,7 @@ a:hover {
   color: $color-light;
   border: 0;
   padding: 0 30px;
+  font-weight: bold;
 }
 .mid-text {
   padding: 10px 0;
@@ -46,5 +47,16 @@ a:hover {
   font-weight: bold;
 }
 .number {
+  font-weight: bold;
+}
+.mini {
+  padding: 0;
+  margin: 0;
+}
+.slider-text {
+  text-align: center;
+}
+.large-text {
+  font-size: 20px;
   font-weight: bold;
 }
