--- a/first-site/src/styles/gallery.scss
+++ b/first-site/src/styles/gallery.scss
@@ -1,26 +1,39 @@
 @import './color';
 
-.btn-gallery {
-  width: 100%;
-  margin: 0;
-  border:0;
-  height: 50px;
-}
-#gallery {
+.gallery {
   width: 100%;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
-.img-container1 {
-  width: 25%;
-  height: 20vw;
-  background-color: $color-secondary;
-}
-.img-container2 {
-  width: 25%;
-  height: 20vw;
-  background-color: $color-dark-secondary;
+  flex-direction: column;
+
+  &__body {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  &__item {
+    width: 25%;
+  }
+
+  &__img {
+    width: 100%;
+    height: 100%;
+  }
+
+  &__btn {
+    width: 100%;
+    margin: 0;
+    border:0;
+    height: 50px;
+    background-color: $color-light-secondary;
+
+    &:hover {
+      background-color: $color-secondary;
+    }
+
+    &:active {
+      background-color: $color-active;
+      color: $color-light;
+    }
+  }
+
 }
