--- a/first-site/src/styles/block.scss
+++ b/first-site/src/styles/block.scss
@@ -108,9 +108,11 @@
   align-items: center;
 }
 .img-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 50px;
   height: 50px;
-  border: 1px solid $color-light;
   margin-right: 20px;
 }
 .box {
@@ -135,7 +137,7 @@
   margin: 20px;
 }
 .black-border {
-  border: 1px solid $color-primary;
+  //border: 1px solid $color-primary;
   margin-right: 0;
 }
 .slider {
@@ -144,14 +146,23 @@
   justify-content: center;
   align-items: center;
   margin-top: 50px;
+  height: 15px;
+
 }
 .slider-btn {
+  cursor: pointer;
+  padding: 0;
   border: 0;
   border-radius: 50%;
   width: 5px;
   height: 5px;
   background-color: $color-light;
   margin: 3px;
+
+  &:focus{
+    width: 10px;
+    height: 10px;
+  }
 }
 .active {
   width: 10px;
