--- a/first-site/src/styles/index.scss
+++ b/first-site/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import './color';
 @import './block';
 @import './gallery';
+@import './modal';
 
 html, body, #root {
   padding: 0;
@@ -18,7 +19,7 @@ input, textarea, select, button {
 }
 
 .container {
-
+position: relative;
 }
 
 a {
@@ -45,6 +46,7 @@ a:hover {
   text-align: center;
 }
 .capslock {
+  text-transform: uppercase;
   font-size: 10px;
   font-weight: bold;
 }
@@ -73,4 +75,8 @@ a:hover {
   &-secondary {
     // цветовые отличия
   }
+}
+.logo-image {
+
+  align-items: left;
 }
