--- a/first-site/src/styles/modal.scss
+++ b/first-site/src/styles/modal.scss
@@ -1,16 +1,35 @@
 @import './color';
 
 .modal {
+  position: fixed;
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 100;
   background-color:rgba(82, 77, 77, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
+  color: black;
 
-  &__content {
+  &__window {
     width: 400px;
     height: 200px;
     background-color: $color-light-secondary;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__header {
+    min-height: 50px;
+  }
+
+  &__body {
+    flex: 1;
+  }
+
+  &__footer {
+    min-height: 50px;
   }
 }
