--- a/first-site/src/styles/block.scss
+++ b/first-site/src/styles/block.scss
@@ -229,3 +229,18 @@
 .footer-link {
   padding: 5px;
 }
+.logo-image {
+  position: fixed;
+  left: 50px;
+}
+.iconMenu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+
+  &__img {
+    width:20px;
+  };
+}
