--- a/first-site/src/styles/modal.scss
+++ b/first-site/src/styles/modal.scss
@@ -14,11 +14,13 @@
   color: black;
 
   &__window {
-    width: 400px;
-    height: 200px;
+    width: 500px;
+    height: 300px;
     background-color: $color-light-secondary;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
   }
 
   &__header {
