--- a/first-site/src/styles/block.scss
+++ b/first-site/src/styles/block.scss
@@ -260,3 +260,9 @@
   height: 3px;
   background: $color-active;
 }
+
+@media screen and (max-width: 700px) {
+  .block {
+    padding: 5px;
+  }
+}
