--- a/first-site/src/styles/gallery.scss
+++ b/first-site/src/styles/gallery.scss
@@ -37,3 +37,16 @@
   }
 
 }
+
+.slider-images {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+
+  &__body {}
+  &__button {}
+  &__img {}
+}
