--- a/first-site/src/styles/gallery.scss
+++ b/first-site/src/styles/gallery.scss
@@ -40,13 +40,38 @@
 
 .slider-images {
   position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
 
-  &__body {}
-  &__button {}
-  &__img {}
+  &__body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 55%;
+    padding: 10px;
+    background-color: $color-primary;
+    border: 2px solid $color-light-secondary;
+    border-radius: 10px;
+  }
+  &__button {
+      &__left {
+        background: none;
+        border: 50px solid transparent; border-right: 30px solid $color-light;
+      }
+    &__right {
+      background: none;
+      border: 50px solid transparent; border-left: 30px solid $color-light;
+    }
+  }
+
+  &__img {
+    margin: 0 20px;
+  }
+
 }
