--- a/first-site/src/styles/block.scss
+++ b/first-site/src/styles/block.scss
@@ -114,6 +114,7 @@
   width: 50px;
   height: 50px;
   margin-right: 20px;
+  background: none;
 }
 .box {
   width: 100%;
@@ -266,7 +267,22 @@
     padding: 5px;
   }
   .logo-image {
-    position: static;
-    left: 30px;
+    position: absolute;
+    left: 20px;
+    width: 100%;
   }
+  .iconMenu {
+    position: absolute;
+    flex-direction: row;
+    top: -20px;
+    left: 50px;
+    &__img{
+      margin:0 10px;
+    }
+  }
+  .menu {
+
+    display: none;
+  }
+
 }
